$Id$

2018-10-17  Christian Franke  <franke@computer.org>

	os_win32/popen_win32.cpp, os_win32/popen.h: New popen()/pclose()
	for Windows.  Unlike MSVCRT _popen(), it does not open a new console.
	os_win32.cpp: Remove run_cmd(), use popen() instead.
	os_win32/daemon_win32.cpp, os_win32/daemon_win32.h: Remove
	daemon_spawn().
	smartd.cpp: Remove _WIN32 specific usage of daemon_spawn(),
	use generic code with popen() also on Windows.
	Place quotes around warning script path on Windows.
	Makefile.am, os_win32/vc14/smart*.vcxproj*: Add new files.

2018-10-17  Rick Chen  <juihsiang.chen@gmail.com>

	scsiprint.cpp: Add SCSI information to JSON output as below:
	- Drive trip temperature (#1079)
	- Error counter log read/write/verify (#1079)
	- Grown defect list (#1082)
	- Percentage used endurance indicator (#1083)

2018-10-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 1100 SSDs: MX500 M.2
	- Samsung based SSDs: Samsung SM841 (#1043), PM841 (#1052),
	  Samsung 860 EVO (#1034, #1040, #1051, #1059),
	  Samsung 860 PRO (#1010, #1068, #1102, #1103, #1104),
	  Samsung Portable SSD T5 (#1050)
	- USB: Samsung Portable SSD T5 (0x04e8:0x61f5) (#1050)

	os_darwin.cpp: Add missing braces to SMART RETURN STATUS LBA register
	setting.  Detected by g++ 7.3 -Wmisleading-indentation.

2018-10-11  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1809 and Server 2019 build number.
	Move "(64)" to end of version info.

	os_linux.cpp: Fix '-d megaraid' open crash on missing /proc/devices.
	There is no /proc/devices on ESXi (see #800) and WSL.

2018-10-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Move code for '--capabilities' to separate functions.

	smartd.cpp: Rework main loop.

	smartctl.cpp, smartd.cpp, os_linux.cpp, os_solaris.cpp:
	Replace all uses of EXIT() macro.  Use early return where possible,
	use throw otherwise.
	utility.h: Remove EXIT() macro.
