@@ -1,5 +1,12 @@
 $Id$
 
+2018-10-23  Christian Franke  <franke@computer.org>
+
+	json.cpp, json.h: Change handling of unsafe and 128-bit integers:
+	Output as string 'KEY_s' and LE byte array 'KEY_le' if range exceeded
+	or verbose mode enabled.
+	smartctl.cpp, smartctl.8.in: Add '--json=v' option.
+
 2018-10-17  Christian Franke  <franke@computer.org>
 
 	os_win32/popen_win32.cpp, os_win32/popen.h: New popen()/pclose()
